# Bg3-Forger

./: README.md  pyproject.toml
bg3_templater/: config.yaml  forger.py  main.py
templates/: meta.mustache
tests/: lsLibTest.py
