[tool.poetry]
name = "bg3-templater"
version = "0.1.0"
description = ""
authors = ["Hadi Kaïs-Khan <kisislenain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
chevron = "^0.14.0"
pytest = "^7.4.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
